Bug fixed in serchview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,14 @@
 		</activity>
 
 		<activity
+			android:name=".ListShowActivity"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+			</intent-filter>
+		</activity>
+
+		<activity
 			android:name=".BookViewOrEditActivity"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
